# raspberry-pi-pico-w-home

./: CMakeLists.txt  home.c  main.c
lib/: dht11.c  dht11.h  display.c  display.h
